[package]
name = "mmtk_pypy"
version = "0.10.0"
authors = [" <>"]

[lib]
name = "mmtk_pypy"
# be careful - LTO is only allowed for certain crate types
# crate-type = ["cdylib"]
crate-type = ["dylib"]

[profile.release]
lto = true

[package.metadata.pypy]
pypy_repo = "https://foss.heptapod.net/pypy/pypy"
pypy_version = "67d5d2b16aacb2ea948552fab2323ebd0abbe924"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
log = "*"

# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI.
mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev = "dbd152b29ff54c3f028318e73ac182d681deda9a" }
# Uncomment the following and fix the path to mmtk-core to build locally
#mmtk = { path = "../repos/mmtk-core" }

[features]
default = ["mmtk/code_space", "mmtk/ro_space"]
nogc = []

# Create the header file
# cd /path/to/my/project && cbindgen . -o target/mmtk.h
